AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libhfs.a

libhfs_a_SOURCES = apple.h block.c block.h btree.c btree.h data.c data.h \
file.c file.h hfs.c hfs.h libhfs.h low.c low.h medium.c medium.h \
node.c node.h os.cc os.h record.c record.h version.c version.h volume.c volume.h

INCLUDES = -I ../../../..
