AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libhfsplus.a

libhfsplus_a_SOURCES = apple.h blockiter.c blockiter.h btree.c btree.h \
hfs.h hfsp.h hfstime.c hfstime.h \
libhfsp.c libhfsp.h os.cc os.h partitions.c partitions.h record.c record.h \
swab.h unicode.c unicode.h volume.c volume.h

INCLUDES = -I ../../../..
